src/app/components/modules/UserWallet.scss
.UserWallet__buysp {
  @extend .e-btn-hollow;
}

.UserWallet__balance {
  padding-bottom: 1rem;
  padding-top: 1rem;

  &.UserWallet__balance.zebra {
      @include themify($themes) {
        background-color: themed('tableRowEvenBackgroundColor');  
        color: themed('textColorPrimary');  
      }   
  }
}

.UserWallet__buysp {
  margin-right: 0 !important;
  margin-top: 1rem;
}

.UserWallet__claimbox {
  margin: 1.5rem 0 0.5rem;
  padding: 1rem 1rem 1.1rem 1rem;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;

  @include themify($themes) {
    border: themed('border');  
    background-color: themed('highlightBackgroundColor');  
    color: themed('textColorPrimary');  
  }     

  &-text {
    font-weight: bold;
  }
  .button {
    @extend .e-btn;
    @include font-size(14px);
    margin: 0;
  }
  // spacing for mobile collapse
  @media only screen and (max-width: 680px) {
      .button {
        margin: 8px 0 0 0;
      }
  }
}

.WalletSubMenu {
  > li > a {
    transition: 0.2s all ease-in-out;
    @include themify($themes) {
      color: themed('textColorSecondary');  
    }  

    &:hover, &:focus {
      @include themify($themes) {
        color: themed('textColorAccent');  
      }  
    }
  }
  > li > a.active {
    cursor: default;
    @include themify($themes) {
      color: themed('textColorPrimary');  
    }     
    font-weight: bold;
  }
  @include themify($themes) {
    border-bottom: themed('border');  
  }       

  margin: 0.5rem 0 1rem;
}

// protect for foundation bug for collapsed state drop-downs
@media only screen and (max-width: 40em) {
    .Wallet_dropdown {
        left: 10px!important;
    }
}

